@@ -1,0 +1,45 @@
+<?php
+
+/**
+ * core/MY_Controller.php
+ *
+ * Default application controller
+ *
+ * ------------------------------------------------------------------------
+ */
+class Application extends CI_Controller {
+
+	protected $data = array();	  // parameters for view components
+	protected $id;				  // identifier for our content
+
+	/**
+	 * Constructor.
+	 * Establish view parameters & load common helpers
+	 */
+
+	function __construct()
+	{
+		parent::__construct();
+		$this->data = array();
+		$this->data['title'] = 'CyberBot Web App';	// our default title
+		$this->errors = array();
+		$this->data['pageTitle'] = 'CyberBot';   // our default page
+	}
+
+	/**
+	 * Render this page
+	 */
+	function render()
+	{
+		$this->data['menubar'] = $this->parser->parse('_menubar', $this->config->item('menu_choices'), true);
+		$this->data['content'] = $this->parser->parse($this->data['pagebody'], $this->data, true);
+
+		// finally, build the browser page!
+		$this->data['data'] = &$this->data;
+		$this->parser->parse('_template', $this->data);
+	}
+
+}
+
+/* End of file MY_Controller.php */
+/* Location: application/core/MY_Controller.php */
